# django-adminlte3

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  apps.pyi  context_processors.pyi  pyproject.toml  qa-in-docker.sh  release.py  release.sh  requirements-dev.txt  requirements.txt  settings.py  setup.cfg  setup.py  setup.template.py  urls.py  wsgi.py
.github/workflows/: build.yml  qa_deploy.yml
adminlte3/: README.md  apps.py  context_processors.py  menus.py  renderers.py  renderers.pyi  urls.py  views.py
adminlte3/admin/: admin.py  apps.py  context_processors.py  context_processors.pyi  widgets.pyi
adminlte3/static/chart.js/: Chart.js
adminlte3/static/dropzone/: dropzone.js.map
adminlte3/static/moment/: moment-with-locales.min.js
adminlte3/static/pdfmake/: pdfmake.js.map  pdfmake.min.js.map  vfs_fonts.js
adminlte3/static/summernote/: summernote-bs4.js.map  summernote-bs5.js.map
adminlte3/templates/admin/: change_form.html  change_form_object_tools.html  (+7 more)
adminlte3/templatetags/: adminlte3.py  adminlte3.pyi
adminlte3_admin/: admin.py  apps.py  apps.pyi  context_processors.py  widgets.py  widgets.pyi
example/: admin.py  apps.py  models.py  urls.py  views.py
example/migrations/: 0001_initial.py  0002_alldatatypes_null_boolean_field_and_more.py  0003_remove_alldatatypes_boolean_field_and_more.py
example_project/: Dockerfile  asgi.py  manage.py  requirements_example.txt  settings.py  urls.py  wsgi.py
example_project/example/: admin.py  apps.py  models.py  urls.py  views.py
templatetags/: adminlte3.pyi
(+193 files in other folders)
