[metadata]
name = adminlte3
description-file = README.md
license_file = LICENSE.md


[flake8]
# set maximum allowed line length default: 79
max-line-length = 120
# McCabe complexity threshold
max-complexity = 5

# comma-separated filename and glob patterns default: *.py
filename = .
# comma-separated filename and glob patterns default: .svn,CVS,.bzr,.hg,.git,__pycache__
# exclude = tests/*

# select errors and warnings to enable which are off by default
# select = E226,E302,E41
# skip errors or warnings
# ignore = E226,E302,E41

# format: set the error format
# format = github
